--- a/create/config.json
+++ b/create/config.json
@@ -1,8 +1,8 @@
 {
     "version": "0.9.0",
     "publisher_id": 22225285,
-    "title": "Balão Lomadee",
+    "title": "Notificação Lomadee",
     "introduction": "Anúncio que sobe a tela após a leitura do conteúdo.",
-    "description": "O Balão Lomadee sobe a tela após a leitura do conteúdo chamando a atenção do usuário.",
+    "description": "O Notificação Lomadee sobe a tela após a leitura do conteúdo chamando a atenção do usuário.",
     "category_id": 9
 }
